test: 전반적인 중복 제거